--- a/app/src/main/res/xml/fragment_intro_scene.xml
+++ b/app/src/main/res/xml/fragment_intro_scene.xml
@@ -3,7 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ConstraintSet android:id="@+id/start">
-        <Constraint android:id="@+id/image_view" />
+        <Constraint
+            android:id="@+id/image_view"
+            android:layout_marginTop="140dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
         <Constraint
             android:id="@+id/login_button"
             android:layout_width="wrap_content"
@@ -38,9 +43,10 @@
     </ConstraintSet>
 
     <Transition
+        app:autoTransition="animateToEnd"
         app:constraintSetEnd="@id/end"
-        app:constraintSetStart="@+id/start">
-        <OnClick app:targetId="@+id/image_view" />
-    </Transition>
+        app:constraintSetStart="@+id/start"
+        app:duration="600"
+        app:layoutDuringTransition="honorRequest" />
 
 </MotionScene>
