--- a/app/src/main/res/layout/fragment_cards.xml
+++ b/app/src/main/res/layout/fragment_cards.xml
@@ -63,11 +63,12 @@
             app:srcCompat="@drawable/ic_notification"
             tools:visibility="invisible" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.constraintlayout.motion.widget.MotionLayout
             android:id="@+id/cards_block"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="76dp">
+            android:layout_marginTop="76dp"
+            app:layoutDescription="@xml/fragment_cards_scene">
 
             <TextView
                 android:id="@+id/cards_title"
@@ -127,7 +128,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.motion.widget.MotionLayout>
 
         <ProgressBar
             android:id="@+id/progress_bar"
